@@ -188,7 +188,8 @@ class TestAptCache(TestCase):
         old_source_list = apt_pkg.config.find("dir::etc::sourcelist")
         old_source_parts = apt_pkg.config.find("dir::etc::sourceparts")
         apt_pkg.config.set("dir::etc::sourcelist", base_sources)
-        apt_pkg.config.set("dir::etc::sourceparts", "/tmp")
+        # TODO: /dev/null is not a dir, perhaps find something better
+        apt_pkg.config.set("dir::etc::sourceparts", "/dev/null")
         # main sources.list
         sources_list = base_sources
         with open(sources_list, "w") as f:
