@@ -27,7 +27,8 @@ class TestProgress(unittest.TestCase):
         apt_pkg.init()
         apt_pkg.config.set("APT::Architecture", "amd64")
         apt_pkg.config.set("Dir::Etc", basedir)
-        apt_pkg.config.set("Dir::Etc::sourceparts", "/tmp")
+        # TODO: /dev/null is not a dir, perhaps find something better
+        apt_pkg.config.set("Dir::Etc::sourceparts", "/dev/null")
         # setup lists dir
         if not os.path.exists("./tmp/partial"):
             os.makedirs("./tmp/partial")
